--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/form.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/form.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Hier soll mal ein Formular zu sehen sein</h1>
 
-    {{ form_start(form) }}
+    {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
         {{ form_row(form.email) }}
         {{ form_row(form.fullname) }}
     {{ form_end(form) }}
