--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/semesterplan.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/semesterplan.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Formulartest{% endblock %}
 
 {% block body %}
-    <h1>Hier soll mal ein Studienplan-Formular zu sehen sein</h1>
+    <h1>Hier soll mal ein Semesterplan-Formular zu sehen sein</h1>
 
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
     {{ form_row(form.semester) }}
