--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/modulhandbuch.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/modulhandbuch.html.twig
@@ -6,8 +6,8 @@
     <h1>Hier soll mal ein Modulhandbuch-Formular zu sehen sein</h1>
 
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
-    {{ form_row(form.semester) }}
-    {{ form_row(form.studiengang) }}
+    {{ form_row(form.gueltig_ab) }}
+    {{ form_row(form.gehoert_zu) }}
     {{ form_row(form.beschreibung) }}
     {{ form_end(form) }}
 
