--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/semesterplan.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/semesterplan.html.twig
@@ -7,8 +7,8 @@
 
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
     {{ form_row(form.semester) }}
-    {{ form_row(form.dozent) }}
-    {{ form_row(form.veranstaltung) }}
+    {{ form_row(form.lehrender) }}
+    {{ form_row(form.module) }}
     {{ form_row(form.sws_uebung) }}
     {{ form_row(form.anzahl_uebungsgruppen) }}
     {{ form_row(form.groesse_uebungsgruppen) }}
