--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/semester.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/semester.html.twig
@@ -3,11 +3,10 @@
 {% block title %}Formulartest{% endblock %}
 
 {% block body %}
-    <h1>Hier soll mal ein Vertiefungs-Formular zu sehen sein</h1>
+    <h1>Hier soll mal ein Semester-Formular zu sehen sein</h1>
 
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
-    {{ form_row(form.stgang) }}
-    {{ form_row(form.vertiefungsrichtung) }}
+    {{ form_row(form.semester) }}
     {{ form_end(form) }}
 
 {% endblock %}
