--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/studienplan.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/studienplan.html.twig
@@ -6,9 +6,9 @@
     <h1>Hier soll mal ein Studienplan-Formular zu sehen sein</h1>
 
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
-    {{ form_row(form.regelsemester) }}
-    {{ form_row(form.startsemester) }}
-    {{ form_row(form.veranstaltung) }}
+    {{ form_row(form.reg_sem) }}
+    {{ form_row(form.start_sem) }}
+    {{ form_row(form.modul) }}
     {{ form_row(form.studiengang) }}
     {{ form_end(form) }}
 
