Security-Gedöhns (fix) UserDependentRoles funktionieren noch nicht 100% (Überprüfung schlägt fehl)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SecurityDemo/login.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SecurityDemo/login.html.twig
@@ -17,7 +17,7 @@
         <input type="hidden" name="_target_path" value="/account" />
     #}
 
-    <input type="hidden" name="_target_path" value="/sec/restricted" />
+    <input type="hidden" name="_target_path" value="/sec/restricted/res" />
 
     <button type="submit">login</button>
 </form>
