Form Creation view Veranstalltung Formtest

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,6 +5,8 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        //im css textarea mit width versehen
+        //im css input feste Größen
     </head>
     <body>
         {% block body %}{% endblock %}
