--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/Fachgebiet.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/Fachgebiet.html.twig
@@ -7,7 +7,7 @@
 
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
     {{ form_row(form.hat) }}
-    {{ form_row(form.titel) }}
+    {{ form_row(form.Titel) }}
     {{ form_end(form) }}
 
 {% endblock %}
