--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/form.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/form.html.twig
@@ -2,15 +2,27 @@
 
 {% block title %}Formulartest{% endblock %}
 
+{% form_theme form _self %}
+{# form_row.html.twig #}
+{% block form_row %}
+    <tr class="form_row">
+        <td>{{ form_label(form) }}</td>
+        <td>{{ form_widget(form) }}</td>
+        <td>{{ form_errors(form) }}</td>
+    </tr>
+{% endblock form_row %}
+
 {% block body %}
     <h1>Hier soll mal ein Dozent-Formular zu sehen sein</h1>
 
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
+    <table>
         {{ form_row(form.anrede) }}
         {{ form_row(form.titel) }}
         {{ form_row(form.name) }}
         {{ form_row(form.nachname) }}
         {{ form_row(form.email) }}
+    </table>
     {{ form_end(form) }}
 
 {% endblock %}
