--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/vertiefung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/vertiefung.html.twig
@@ -1,13 +1,25 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}Formulartest{% endblock %}
+{% block title %}Vertiefungstest{% endblock %}
+
+{% form_theme form _self %}
+{# form_row.html.twig #}
+{% block form_row %}
+    <tr class="form_row">
+        <td>{{ form_label(form) }}</td>
+        <td>{{ form_widget(form) }}</td>
+        <td>{{ form_errors(form) }}</td>
+    </tr>
+{% endblock form_row %}
 
 {% block body %}
     <h1>Hier soll mal ein Vertiefungs-Formular zu sehen sein</h1>
 
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
-    {{ form_row(form.stgang) }}
-    {{ form_row(form.vertiefungsrichtung) }}
+    <table>
+        {{ form_row(form.stgang) }}
+        {{ form_row(form.vertiefungsrichtung) }}
+    </table>
     {{ form_end(form) }}
 
 {% endblock %}
