Datenbank mappings angepasst

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/dozent.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/dozent.html.twig
@@ -22,6 +22,8 @@
         {{ form_row(form.name) }}
         {{ form_row(form.nachname) }}
         {{ form_row(form.email) }}
+        {{ form_row(form.username) }}
+        {{ form_row(form.roles) }}
     </table>
     {{ form_end(form) }}
 
