--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/veranstaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/veranstaltung.html.twig
@@ -17,12 +17,11 @@
 
     {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
     <table>
-        {{ form_row(form.erstellt.email) }}
         {{ form_row(form.Status) }}
         {{ form_row(form.Kuerzel) }}
         {{ form_row(form.Name) }}
         {{ form_row(form.Name_en) }}
-        {{ form_row(form.Haeufigkeit) }}
+        {{ form_row(form.Haeufigkeit) }}p
         {{ form_row(form.Dauer) }}
         {{ form_row(form.Lehrveranstaltungen) }}
         {{ form_row(form.Kontaktzeit_VL) }}
@@ -37,7 +36,7 @@
         {{ form_row(form.Leistungspunkte) }}
         {{ form_row(form.Voraussetzung_LP) }}
         {{ form_row(form.Voraussetzung_inh) }}
-        {{ form_row(form.beauftragt.email) }}
+        {{ form_row(form.beauftragter) }}
     </table>
     {{ form_end(form) }}
 
