Alle Action() laufen, Titel in Fachgebiet nicht mehr Unique

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/dozent.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/InsertForm/dozent.html.twig
@@ -22,7 +22,7 @@
         {{ form_row(form.name) }}
         {{ form_row(form.nachname) }}
         {{ form_row(form.email) }}
-        {{ form_row(form.username) }}
+        {{ form_row(form.password) }}
         {{ form_row(form.roles) }}
     </table>
     {{ form_end(form) }}
