--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SecurityDemo/login.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SecurityDemo/login.html.twig
@@ -1,23 +1,25 @@
-<h1 class="title">Login</h1>
+{% extends 'FHBingenMHBBundle::index.html.twig' %}
 
-{% if error %}
-    <div class="error">{{ error.message }}</div>
-{% endif %}
+{% block content %}
 
-<form action="{{ '/sec/restricted/login_check' }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    {#{% if error %}#}
+        {#<div class="error">{{ error.message }}</div>#}
+    {#{% endif %}#}
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+    <div class="container" style="width:  300px">
+        <form class="form-signin" role="form" action="{{ '/sec/restricted/login_check' }}" method="post">
+            <h2 class="form-signin-heading">Please sign in</h2>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            {#<div class="checkbox">#}
+                {#<label>#}
+                    {#<input type="checkbox" value="remember-me"> Remember me#}
+                {#</label>#}
+            {#</div>#}
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </form>
+    </div>
 
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
-
-    <input type="hidden" name="_target_path" value="/sec/restricted/res" />
-
-    <button type="submit">login</button>
-</form>
+{% endblock %}
