--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/rendernavi.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/rendernavi.html.twig
@@ -1,9 +1,12 @@
 <li role="presentation" class="active">
-    <a href="" >Navigation</a>
+    <a href="" >Dozenten-Navigation</a>
 </li>
 <li role="presentation">
-    <a href="">Testpunkt 1</a>
+    <a href="">Modulansicht(verwaltbare)</a>
 </li>
 <li role="presentation">
-    <a href="">Testpunkt 2</a>
+    <a href="">Modulplanung</a>
+</li>
+<li role="presentation">
+    <a href="">Benutzerdoku</a>
 </li>
