--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/eigeneModule.html.twig
@@ -1,4 +1,4 @@
-{% extends 'FHBingenMHBBundle::layout1.html.twig' %}
+{% extends 'FHBingenMHBBundle::layout.html.twig' %}
 {% block content %}
 <div class="table-responsive">
     <table class="table table-bordered">
