--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/rendernavi.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/rendernavi.html.twig
@@ -1,5 +1,5 @@
 <li role="presentation" class="active">
-    <a href="" >Dozenten-Navigation</a>
+    <a href="" >Dozent</a>
 </li>
 <li role="presentation">
     <a href="">Modulansicht(verwaltbare)</a>
@@ -7,6 +7,50 @@
 <li role="presentation">
     <a href="">Modulplanung</a>
 </li>
+
+<li role="presentation" class="active">
+    <a href="" >Studiengangleiter</a>
+</li>
+
+<li role="presentation">
+    <a href="">Modulansicht(alle)</a>
+</li>
+
+<li role="presentation">
+    <a href="">Modulcodeanpassung</a>
+</li>
+
+<li role="presentation">
+    <a href="">Modulhandbuchübersicht</a>
+</li>
+
+<li role="presentation">
+    <a href="">Modulhandbucherstellung</a>
+</li>
+
+<li role="presentation" class="active">
+    <a href="">Administration</a>
+</li>
+
+<li role="presentation">
+    <a href="">Benutzerverwaltung</a>
+</li>
+
+<li role="presentation">
+    <a href="">Moduldeaktivierung</a>
+</li>
+
+<li role="presentation">
+    <a href="">Studiengangverwaltung</a>
+</li>
+
+<li role="presentation" class="active">
+    <a href="" >Hilfen</a>
+</li>
+
 <li role="presentation">
     <a href="">Benutzerdoku</a>
 </li>
+
+{% include 'FHBingenMHBBundle:Navigation:rendernavi.html.twig' %}
+
