--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -101,18 +101,12 @@
 
 <body style="margin-top:75px">
 
-<div id="header" class="navbar navbar-default navbar-fixed-top" style="min-height:75px">
+<div id="header" class="navbar navbar-default navbar-fixed-top navbar-brand" style="min-height:75px">
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">
             <img src="{{ asset('bundles/fhbingenmhb/images/logo.png') }}" alt="logo" />
             <span>Modulhandbuchverwaltung</span>
-        </a>
     </div>
     <nav class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-
-
-        </ul>
         <ul class="nav navbar-nav pull-right">
             <li class="dropdown">
                 <a href="#" id="nbAcctDD" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i>Username<i
@@ -128,8 +122,14 @@
     <div id="sidebar-wrapper" class="col-md-2">
         <nav id="sidebar">
             <ul class="nav list-group nav-pills nav-stacked">
-                {% include 'FHBingenMHBBundle:Navigation:rendernavi.html.twig' %}
-
+                {% block navbar %}
+                    <li role="presentation" class="active">
+                        <a href="" >Hilfen</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="">Benutzerdoku</a>
+                    </li>
+                {% endblock %}
             </ul>
         </nav>
     </div>
@@ -149,18 +149,6 @@
 
 
 <script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
-
-<!-- JavaScript jQuery code from Bootply.com editor  -->
-
-<script type='text/javascript'>
-
-    $(document).ready(function () {
-
-
-    });
-
-</script>
 
 </body>
 </html>
