--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SecurityDemo/login.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SecurityDemo/login.html.twig
@@ -18,6 +18,8 @@
                     {#<input type="checkbox" value="remember-me"> Remember me#}
                 {#</label>#}
             {#</div>#}
+
+            <input type="hidden" name="/Dozent" value="account" />
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
     </div>
