--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SecurityDemo/login.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SecurityDemo/login.html.twig
@@ -19,7 +19,7 @@
                 {#</label>#}
             {#</div>#}
 
-            <input type="hidden" name="/Dozent" value="account" />
+            {#<input type="hidden" name="/Dozent" value="account" />#}
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
     </div>
