--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Login/login.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Login/login.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
 
-        <form class="form-signin" role="form">
+        <form class="form-signin" role="form" action="{{ '/sec/restricted/login_check' }}">
             <h2 class="form-signin-heading">Please sign in</h2>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
