Template verkettung Login

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -39,27 +39,15 @@
         </tr>
         </thead>
         <tbody>
+        {% for veranstaltung in modullehrend %}
         <tr>
-            <td>1</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
-        <tr>
-            <td>2</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-        </tr>
+        {% endfor %}
         </tbody>
     </table>
 </div>
