Template verkettung Login

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -41,11 +41,11 @@
         <tbody>
         {% for veranstaltung in modullehrend %}
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>{{veranstaltung.name}}</td>
+            <td>{{veranstaltung.kuerzel}}</td>
+            <td>{{vernastaltung.erstelldatum|date('d.m.Y')}}</td>
+            <td>{{veranstaltung.haeufigkeit}}</td>
+            <td>{{veranstaltung.beauftragter}}</td>
         </tr>
         {% endfor %}
         </tbody>
