Template verkettung Login

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -43,7 +43,7 @@
         <tr>
             <td>{{veranstaltung.name}}</td>
             <td>{{veranstaltung.kuerzel}}</td>
-            <td>{{vernastaltung.erstelldatum|date('d.m.Y')}}</td>
+            <td>{{veranstaltung.erstellungsdatum|date('d.m.Y')}}</td>
             <td>{{veranstaltung.haeufigkeit}}</td>
             <td>{{veranstaltung.beauftragter}}</td>
         </tr>
