Template verkettung Login

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -17,6 +17,8 @@
         </tr>
         </thead>
         <tbody>
+        {# count festsetzen für das hochzählen des mLehrende[] #}
+        {# zweite for gibt jeweils Lehrende mit Namen in neue Zeilen aus #}
         {% set count = 0 %}
         {% for veranstaltung in modulverantwortung %}
         <tr>
