--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/eigeneModule.html.twig
@@ -1,47 +1,64 @@
 {% extends 'FHBingenMHBBundle:SGL:SGL_main.html.twig' %}
+
+{#bei Date wird immer |date('Y-m-d') benötigt um als String zu casten#}
+
 {% block content %}
-<div class="table-responsive">
-    <table class="table table-bordered">
-        <thead>
-        <tr>
-            <th>#</th>
-            <th>Tabellen-Überschrift</th>
-            <th>Tabellen-Überschrift</th>
-            <th>Tabellen-Überschrift</th>
-            <th>Tabellen-Überschrift</th>
-            <th>Tabellen-Überschrift</th>
-            <th>Tabellen-Überschrift</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>1</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-            <td>Tabellen-Zelle</td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+
+    <div class="table-responsive">
+        <h3>Module als Modulverantwortlicher</h3>
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th>Modultitel</th>
+                <th>Kürzel</th>
+                <th>Erstelldatum</th>
+                <th>Häufigkeit</th>
+                <th>Lehrende</th>
+            </tr>
+            </thead>
+            <tbody>
+            {# count festsetzen für das hochzählen des mLehrende[] #}
+            {# zweite for gibt jeweils Lehrende mit Namen in neue Zeilen aus #}
+            {% set count = 0 %}
+            {% for veranstaltung in modulverantwortung %}
+                <tr>
+                    <td>{{veranstaltung.name}}</td>
+                    <td>{{veranstaltung.kuerzel}}</td>
+                    <td>{{veranstaltung.erstellungsdatum|date('d.m.Y')}}</td>
+                    <td>{{veranstaltung.haeufigkeit}}</td>
+                    <td>
+                        {% for name in mLehrende[count] %}
+                            {{ name }}</br>
+                        {% endfor %}
+                    </td>
+                </tr>
+                {% set count = count +1 %}
+            {% endfor %}
+            </tbody>
+        </table>
+
+        <h3>Module als Lehrender</h3>
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th>Modultitel</th>
+                <th>Kürzel</th>
+                <th>Erstelldatum</th>
+                <th>Häufigkeit</th>
+                <th>Modulverantwortlicher</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for veranstaltung in modullehrend %}
+                <tr>
+                    <td>{{veranstaltung.name}}</td>
+                    <td>{{veranstaltung.kuerzel}}</td>
+                    <td>{{veranstaltung.erstellungsdatum|date('d.m.Y')}}</td>
+                    <td>{{veranstaltung.haeufigkeit}}</td>
+                    <td>{{veranstaltung.beauftragter}}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
