--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Uebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/MHB/MHB_Modul_Uebersicht.html.twig
@@ -40,5 +40,10 @@
 
         </tbody>
     </table>
+    {% for str in Titel %}
+        {% for s in str %}
+            <p>{{ s }}</p>
+        {% endfor %}
+    {% endfor %}
 </div>
 {% endblock %}
