--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Login/login.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Login/login.html.twig
@@ -5,7 +5,7 @@
         <div>{{ error.message }}</div>
     {% endif %}
     <div class="container" style="width: 300px">
-        <form class="form-signin" role="form" action="{{ path('login_check') }}" method="post">
+        <form class="form-signin" role="form" action="{{ path('fhbingen_mhb_login_securitycheck') }}" method="post">
             <label for="inputEmail" class="sr-only">Email-Adresse:</label>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email-Addresse" name="_username"
                    value="{{ last_username }}" required autofocus/>
@@ -24,7 +24,7 @@
             #}
 
 
-            <input type="hidden" name="_target_path" value="/restricted/role_check"/>
+            <input type="hidden" name="_target_path" value="{{ path('fhbingen_mhb_restricted_rolecheck') }}"/>
 
             <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
         </form>
