Nutzerverwaltung Grundbaustein Routen gehen nicht

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/SGL_main.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/SGL_main.html.twig
@@ -5,7 +5,7 @@
         <a href="" >Dozent</a>
     </li>
     <li role="presentation">
-        <a href="">Modulansicht(verwaltbare)</a>
+        <a href="/{{ path('fhbingen_mhb_default_sglmain') }}">Modulansicht(verwaltbare)</a>
     </li>
     <li role="presentation">
         <a href="">Modulplanung</a>
@@ -36,7 +36,7 @@
     </li>
 
     <li role="presentation">
-        <a href="">Benutzerverwaltung</a>
+        <a href="/{{ path('fhbingen_mhb_verwaltungs_sglshowusers') }}">Benutzerverwaltung</a>
     </li>
 
     <li role="presentation">
